--- a/packages/react/src/Overlay/Overlay.module.css
+++ b/packages/react/src/Overlay/Overlay.module.css
@@ -19,6 +19,8 @@
   border-radius: var(--borderRadius-large);
   box-shadow: var(--shadow-floating-small);
   animation: overlay-appear 200ms cubic-bezier(0.33, 1, 0.68, 1);
+  /* This property is added to help with situations where position: absolute leads to text wrapping since the element has no intrinsic width. */
+  white-space: nowrap;
 
   &:focus {
     outline: none;
